@@ -1,6 +1,7 @@
   version 2.7.9
 - improved message pattern matching to match exact messages
 - improved currency display
+- fixed mailbox detection after accepting queues while mailbox is open
 
   version 2.7.8
 - fixed bug with item count when looting more than one of an item
